crates/file-parser/tests/snapshots/snapshots__malformed__brokenpersist--recovers.ppt.snap
---
source: crates/file-parser/tests/snapshots.rs
expression: output
---
Deck Title Slide

- Top level point

  - Nested detail

- Second point with emphasis

Numbers Slide

Region

Total

North

42

Grouped shapes below.

Inside a group shape.

> Speaker note for the intro slide.

> Second slide notes mention the table.
