crates/file-parser/tests/snapshots/snapshots__malformed__encrypted--errors.odt.snap
---
source: crates/file-parser/tests/snapshots.rs
expression: output
---
ERROR: document is encrypted
