crates/file-parser/tests/snapshots/snapshots__malformed__truncated--errors.docx.snap
---
source: crates/file-parser/tests/snapshots.rs
expression: output
---
ERROR: malformed document: not a readable zip archive: invalid Zip archive: Could not find EOCD
